employee/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  labels:
    app: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      name: employee
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: registry.lion7.dev/<your-username-here>/employee
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
      restartPolicy: Always
