employee/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee
spec:
  selector:
    app: employee
  ports:
    - name: http
      protocol: TCP
      appProtocol: HTTP
      port: 8080
      targetPort: 8080
