employee/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee
spec:
  rules:
    - host: <your-username-here>.lion7.dev
      http:
        paths:
          - pathType: Prefix
            path: "/employee"
            backend:
              service:
                name: employee
                port:
                  number: 8080
